--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -5,12 +5,12 @@
 
                 <li>
                     <a href="https://www.creative-tim.com">
-                        Creative Tim
+                        COSTER
                     </a>
                 </li>
                 <li>
-                    <a href="http://blog.creative-tim.com">
-                       Blog
+                    <a href="http://www.uvsq.fr">
+                       UVSQ
                     </a>
                 </li>
                 <li>
@@ -21,7 +21,7 @@
             </ul>
         </nav>
         <div class="copyright pull-right">
-            &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by <a href="https://www.creative-tim.com">Creative Tim</a>
+            &copy; {{test | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> by <a href="#">DataSclae</a>
         </div>
     </div>
 </footer>
