--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,39 +1,18 @@
 
 <div class="sidebar-wrapper">
     <div class="logo">
-        <a href="https://www.creative-tim.com" class="simple-text">
+        <a href="#" class="simple-text">
             <div class="logo-img">
-                <img src="../../assets/img/angular2-logo.png" alt="">
+                <img src="http://www.uvsq.fr/jsp/images/favicon.png" alt="">
             </div>
-            Creative Tim
+            COSTER
         </a>
     </div>
     <ul class="nav">
             <li *ngIf="isNotMobileMenu()">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                    <i class="ti-panel"></i>
-					<p>Stats</p>
-                </a>
-            </li>
-            <li class="dropdown" *ngIf="isNotMobileMenu()">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="ti-bell"></i>
-                        <p class="notification">5</p>
-    					<p>Notifications</p>
-    					<b class="caret"></b>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Notification 1</a></li>
-                    <li><a href="#">Notification 2</a></li>
-                    <li><a href="#">Notification 3</a></li>
-                    <li><a href="#">Notification 4</a></li>
-                    <li><a href="#">Another notification</a></li>
-                  </ul>
-            </li>
-            <li *ngIf="isNotMobileMenu()">
                 <a href="#">
 					<i class="ti-settings"></i>
-					<p>Settings</p>
+					<p>Deconnexion</p>
                 </a>
             </li>
             <li class="divider" *ngIf="isNotMobileMenu()"></li>
