--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,20 +6,20 @@
                         <div class="row">
                             <div class="col-xs-5">
                                 <div class="icon-big icon-warning text-center">
-                                    <i class="ti-server"></i>
+                                    <i class="ti-user"></i>
                                 </div>
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Capacity</p>
-                                    105GB
+                                    <p>Enseignants</p>
+                                    105
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-reload"></i> Updated now
+                                <i class="ti-reload"></i> 4000 heures
                             </div>
                         </div>
                     </div>
@@ -36,15 +36,15 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Revenue</p>
-                                    $1,345
+                                    <p>UE</p>
+                                    1500
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-calendar"></i> Last day
+                                <i class="ti-calendar"></i> 40 000 heures
                             </div>
                         </div>
                     </div>
@@ -61,15 +61,15 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Errors</p>
-                                    23
+                                    <p>Bilan</p>
+                                    +200h
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-timer"></i> In the last hour
+                                <i class="ti-timer"></i> <b>(MAJ)</b> 12-12-2019
                             </div>
                         </div>
                     </div>
@@ -103,20 +103,13 @@
         </div>
        
         <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Email Statistics</h4>
-                        <p class="category">Last Campaign Performance</p>
-                    </div>
-                    <div class="content">
+           
 
-                        <div class="footer">
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
+                    <app-diplome-enseignant></app-diplome-enseignant>
+                
+                  
+
+                       <app-quota-enseignant></app-quota-enseignant> 
             
         </div>
     </div>
