--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -43,13 +43,13 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label>Nom</label>
-                                        <input value="{{userInfo.nom}}" type="text" class="form-control border-input" placeholder="Nom" value="">
+                                        <input value="{{userInfo.nom}}" type="text" class="form-control border-input" placeholder="Nom" />
                                     </div>
                                 </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label>Prénom</label>
-                                        <input value="{{userInfo.prenom}}" type="text" class="form-control border-input" placeholder="Prenom" value="">
+                                        <input value="{{userInfo.prenom}}" type="text" class="form-control border-input" placeholder="Prenom" />
                                     </div>
                                 </div>
                        
@@ -61,7 +61,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label>Addresse</label>
-                                        <input value="{{userInfo.adresse}}" type="text" class="form-control border-input" placeholder="Home Address" value="Melbourne, Australia">
+                                        <input value="{{userInfo.adresse}}" type="text" class="form-control border-input" placeholder="Home Address" />
                                     </div>
                                 </div>
                             </div>
@@ -70,13 +70,13 @@
                                     <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Email</label>
-                                                <input value="{{userInfo.email}}" type="text" class="form-control border-input" placeholder="Email" value="">
+                                                <input value="{{userInfo.email}}" type="text" class="form-control border-input" placeholder="Email" />
                                             </div>
                                         </div>
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label>Mot de passe</label>
-                                        <input value="{{userInfo.motpasse}}" type="password" class="form-control border-input" placeholder="Mot de passe" value="">
+                                        <input value="{{userInfo.motpasse}}" type="password" class="form-control border-input" placeholder="Mot de passe" />
                                     </div>
                                 </div>
                                
