--- a/src/app/formation/formation.component.html
+++ b/src/app/formation/formation.component.html
@@ -39,30 +39,26 @@
               <div class="content table-responsive table-full-width">
                   <table class="table" id="mytable">
                       <thead>
-                          <tr>
-                              <th *ngFor="let cell of tableData.headerRow">{{ cell }}</th>
-                              
+                          <tr>                              
+                              <th>#Id</th>
+                              <th>Titre UE</th>
+                              <th>Maquette</th>
+                              <th>Département</th>
+                              <th>Responsable</th>
+                              <th>Volume horaire</th>
+                              <th>Verrou</th>
                               <th>Action</th>
                           </tr>
                       </thead>
                       <tbody>
-                          <tr *ngFor="let row of tableData.dataRows">
-                              
-                              <td *ngFor="let cell of row;let i=index;">
-                                
-                                    <a *ngIf="i==4" routerLink="/ens/3">
-                                        <p>{{cell}}</p>
-                                    </a>
-
-                                    <a *ngIf="i==0" routerLink="/ue/3">
-                                        <p>{{cell}}</p>
-                                    </a>
-
-                                    <p *ngIf="i%2!=0" >{{cell}}</p>
-                                    <p *ngIf="i==6" >{{cell}}</p>
-                                    <p *ngIf="i==2" >{{cell}}</p>
-                            
-                            </td>
+                          <tr *ngFor="let row of allDiplome">
+                              <td>{{row.idDiplome}}</td>
+                              <td>{{row.codeUe}}</td>
+                              <td>{{row.semestre}}</td>
+                              <td>Informatique</td>
+                              <td>{{row.idEnseignant}}</td>
+                              <td>{{row.volumehoraire}}</td>
+                              <td>Oui</td>
                               <td><div class="dropdown">
                                   <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
                                   data-toggle="dropdown">Action
@@ -129,27 +125,39 @@
         </div>
         <div class="modal-body">
             
-                      <form >
+                      <form #diplomeForm="ngForm" (ngSubmit)="onAddDiplome(diplomeForm)">
                           <div class="form-group">
-                            <label for="formGroupExampleInput">Titre</label>
-                            <input type="text" class="form-control" id="formAdd" placeholder="LMD">
+                            <label for="formGroupExampleInput">Code UE</label>
+                            <input ngModel required type="text" class="form-control" name="codeue" id="formAdd" placeholder="LMD">
                           </div>
                           <div class="form-group">
-                            <label for="formGroupExampleInput2">Responsable</label>
-                            <input type="text" class="form-control" id="formAdd"  placeholder="Arthur Dupont">
+                            <label for="formGroupExampleInput2">Titre</label>
+                            <input ngModel required  type="text" class="form-control" id="formAdd" name="titre" placeholder="Arthur Dupont">
                           </div>
                           <div class="form-group">
-                              <label for="formGroupExampleInput2">Spécialité</label>
-                              <input type="text" class="form-control" id="formAdd"  placeholder="Informatique">
+                              <label for="formGroupExampleInput2">Maquette</label>
+                              <input ngModel required type="text" class="form-control" id="formAdd" name="maquette" placeholder="Informatique">
                             </div>
-                           
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Département</label>
+                                <input ngModel required type="text" class="form-control" id="formAdd"  name="dept" placeholder="Informatique">
+                              </div>
+                              <div class="form-group">
+                                <label for="formGroupExampleInput2">Responsable</label>
+                                <input ngModel required type="text" class="form-control" id="formAdd" name="respo" placeholder="Informatique">
+                              </div>
+                              <div class="form-group">
+                                <label for="formGroupExampleInput2">Volume horaire</label>
+                                <input ngModel required type="text" class="form-control" id="formAdd"  name="vhoraire" placeholder="Informatique">
+                              </div>
+                              <div class="form-group">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button type="submit" class="btn btn-primary">Save changes</button>
+                              </div>
                         </form>
                     
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+       
       </div>
     </div>
   </div>
