--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -14,6 +14,7 @@
                                                         <th colspan="1">Heures à faire </th>
                                                         <th rowspan="2">Heures<br> faites</th>
                                                         <th rowspan="2">Bilan</th>
+                                                        <th rowspan="2">Responsable</th>
                                                         <th rowspan="2">Verrou</th>
                                                         <th rowspan="2">Action</th>
                                                           </tr>
@@ -34,6 +35,8 @@
                                                 </td>
                                                 <td><span class="label label-danger">-1</span>
                                                 </td>
+                                                <td>Zoubida</td>
+                                                
                                                 <td><span class="label label-primary">ON</span>
                                                 </td>
                                                 <td>
@@ -59,6 +62,7 @@
                                                 </td>
                                                 <td><span class="label label-danger">-1</span>
                                                 </td>
+                                                <td>Zoubida</td>
                                                 <td><span class="label label-primary">ON</span>
                                                 </td>
                                                 <td>
