--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,14 +12,14 @@
                             <div class="col-xs-7">
                                 <div class="numbers">
                                     <p>Enseignants</p>
-                                    105
+                                    {{enseignant}}
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-reload"></i> 4000 heures
+                                <i class="ti-reload"></i> {{heurefaites}} heures
                             </div>
                         </div>
                     </div>
