--- a/src/app/entity/ens/ens.component.html
+++ b/src/app/entity/ens/ens.component.html
@@ -8,10 +8,9 @@
               <div class="content">
                   <div class="author">
                     <img class="avatar border-white" src="assets/img/faces/face-2.jpg" alt="..."/>
-                    <h4 class="title">{{userInfo.nom}} {{userInfo.prenom}}</h4>
+                    <h4 class="title"></h4>
                   </div>
                   <p class="description text-center">
-                      {{userInfo.about}}
                   </p>
               </div>
               <hr>
@@ -37,19 +36,19 @@
                           <div class="col-md-4">
                               <div class="form-group">
                                   <label for="exampleInputEmail1">Statut</label>
-                                  <input type="email" class="form-control border-input" placeholder="Email" value="{{userInfo.statut}}">
+                                  <input type="email" class="form-control border-input" placeholder="Email" value="">
                               </div>
                           </div>
                           <div class="col-md-3">
                               <div class="form-group">
                                   <label>Nom</label>
-                                  <input value="{{userInfo.nom}}" type="text" class="form-control border-input" placeholder="Nom" />
+                                  <input value="" type="text" class="form-control border-input" placeholder="Nom" />
                               </div>
                           </div>
                           <div class="col-md-3">
                               <div class="form-group">
                                   <label>Prénom</label>
-                                  <input value="{{userInfo.prenom}}" type="text" class="form-control border-input" placeholder="Prenom" />
+                                  <input value="" type="text" class="form-control border-input" placeholder="Prenom" />
                               </div>
                           </div>
                  
@@ -61,7 +60,7 @@
                           <div class="col-md-12">
                               <div class="form-group">
                                   <label>Addresse</label>
-                                  <input value="{{userInfo.adresse}}" type="text" class="form-control border-input" placeholder="Home Address" />
+                                  <input value="" type="text" class="form-control border-input" placeholder="Home Address" />
                               </div>
                           </div>
                       </div>
@@ -70,13 +69,13 @@
                               <div class="col-md-4">
                                       <div class="form-group">
                                           <label>Email</label>
-                                          <input value="{{userInfo.email}}" type="text" class="form-control border-input" placeholder="Email" />
+                                          <input value="" type="text" class="form-control border-input" placeholder="Email" />
                                       </div>
                                   </div>
                           <div class="col-md-3">
                               <div class="form-group">
                                   <label>Mot de passe</label>
-                                  <input value="{{userInfo.motpasse}}" type="password" class="form-control border-input" placeholder="Mot de passe" />
+                                  <input value="" type="password" class="form-control border-input" placeholder="Mot de passe" />
                               </div>
                           </div>
                          
