--- a/src/app/shared/quota-enseignant/quota-enseignant.component.html
+++ b/src/app/shared/quota-enseignant/quota-enseignant.component.html
@@ -52,18 +52,110 @@
                           
                         </tr>
                         <tr>
-                              <th scope="row">Licence IN101</th>
-                              <td>Fondements de l'Informatique II</td>
-                              <td>L2 S2</td>
-                              <td>L2 S2</td>
-                              <td>L2 S2</td>
+                          <th scope="row">Licence IN100</th>
+                          <td>Fondements de l'Informatique I</td>
                           <td>L1 S2</td>
+                          <td>22</td>
+                          <td>0</td>
+                          <td>12</td>                                                    <td><span class="label label-warning">35</span>
+                          </td>
+                          <td><span class="label label-danger">-1</span>
+                          </td>
+                          <td><span class="label label-primary">ON</span>
+                          </td>
+                          <td>
+                                  <div class="dropdown">
+                                          <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
+                                          data-toggle="dropdown">Action
+                                          </button>
+                                          <ul class="dropdown-menu">
+                                              <li><a href="#"><i class="ti-trash"></i>  Supprimer</a></li>
+                                              <li><a href="#"><i class="ti-pencil"></i> Editer</a></li>
+                                            
+                                          </ul>
+                                        </div>
+                          </td>
+                          
+                        </tr>
+                        <tr>
+                          <th scope="row">Licence IN100</th>
+                          <td>Fondements de l'Informatique I</td>
                           <td>L1 S2</td>
+                          <td>22</td>
+                          <td>0</td>
+                          <td>12</td>                                                    <td><span class="label label-warning">35</span>
+                          </td>
+                          <td><span class="label label-danger">-1</span>
+                          </td>
+                          <td><span class="label label-primary">ON</span>
+                          </td>
+                          <td>
+                                  <div class="dropdown">
+                                          <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
+                                          data-toggle="dropdown">Action
+                                          </button>
+                                          <ul class="dropdown-menu">
+                                              <li><a href="#"><i class="ti-trash"></i>  Supprimer</a></li>
+                                              <li><a href="#"><i class="ti-pencil"></i> Editer</a></li>
+                                            
+                                          </ul>
+                                        </div>
+                          </td>
+                          
+                        </tr>
+                        <tr>
+                          <th scope="row">Licence IN100</th>
+                          <td>Fondements de l'Informatique I</td>
                           <td>L1 S2</td>
-                          <td>L2 S2</td>
-                              <td><span class="label label-warning">OFF</span>
-                              </td>
-                            </tr>
+                          <td>22</td>
+                          <td>0</td>
+                          <td>12</td>                                                    <td><span class="label label-warning">35</span>
+                          </td>
+                          <td><span class="label label-danger">-1</span>
+                          </td>
+                          <td><span class="label label-primary">ON</span>
+                          </td>
+                          <td>
+                                  <div class="dropdown">
+                                          <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
+                                          data-toggle="dropdown">Action
+                                          </button>
+                                          <ul class="dropdown-menu">
+                                              <li><a href="#"><i class="ti-trash"></i>  Supprimer</a></li>
+                                              <li><a href="#"><i class="ti-pencil"></i> Editer</a></li>
+                                            
+                                          </ul>
+                                        </div>
+                          </td>
+                          
+                        </tr>
+                        <tr>
+                          <th scope="row">Licence IN100</th>
+                          <td>Fondements de l'Informatique I</td>
+                          <td>L1 S2</td>
+                          <td>22</td>
+                          <td>0</td>
+                          <td>12</td>                                                    <td><span class="label label-warning">35</span>
+                          </td>
+                          <td><span class="label label-danger">-1</span>
+                          </td>
+                          <td><span class="label label-primary">ON</span>
+                          </td>
+                          <td>
+                                  <div class="dropdown">
+                                          <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
+                                          data-toggle="dropdown">Action
+                                          </button>
+                                          <ul class="dropdown-menu">
+                                              <li><a href="#"><i class="ti-trash"></i>  Supprimer</a></li>
+                                              <li><a href="#"><i class="ti-pencil"></i> Editer</a></li>
+                                            
+                                          </ul>
+                                        </div>
+                          </td>
+                          
+                        </tr>
+                               
                       </tbody>
                     </table>
           <div class="footer">
