--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -10,13 +10,12 @@
                                     <table class="table table-bordered">
                                             <thead>
                                                     <tr>
-                                                        <th colspan="3">Code UE</th>
+                                                        <th colspan="3">Code</th>
                                                         <th colspan="1">Heures à faire </th>
                                                         <th rowspan="2">Heures<br> faites</th>
                                                         <th rowspan="2">Bilan</th>
                                                         <th rowspan="2">Responsable</th>
                                                         <th rowspan="2">Verrou</th>
-                                                        <th rowspan="2">Action</th>
                                                           </tr>
                                               <tr>
                                                 <th scope="col">Code UE</th>
@@ -26,59 +25,42 @@
                                               </tr>
                                             </thead>
                                             <tbody>
-                                              <tr>
-                                                <th scope="row">Licence IN100</th>
-                                                <td>Fondements de l'Informatique I</td>
-                                                <td>L1 S2</td>
-                                                <td>22</td>
-                                                                                                   <td><span class="label label-warning">35</span>
-                                                </td>
-                                                <td><span class="label label-danger">-1</span>
-                                                </td>
-                                                <td>Zoubida</td>
-                                                
-                                                <td><span class="label label-primary">ON</span>
-                                                </td>
-                                                <td>
-                                                        <div class="dropdown">
-                                                                <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
-                                                                data-toggle="dropdown">Action
-                                                                </button>
-                                                                <ul class="dropdown-menu">
-                                                                    <li><a href="#"><i class="ti-trash"></i>  Supprimer</a></li>
-                                                                    <li><a href="#"><i class="ti-pencil"></i> Editer</a></li>
-                                                                  
-                                                                </ul>
-                                                              </div>
-                                                </td>
-                                                
-                                              </tr>
-                                              <tr>
-                                                <th scope="row">Licence IN100</th>
-                                                <td>Fondements de l'Informatique I</td>
-                                                <td>L1 S2</td>
-                                                <td>22</td>
-                                                                                                   <td><span class="label label-warning">35</span>
-                                                </td>
-                                                <td><span class="label label-danger">-1</span>
-                                                </td>
-                                                <td>Zoubida</td>
-                                                <td><span class="label label-primary">ON</span>
-                                                </td>
-                                                <td>
-                                                        <div class="dropdown">
-                                                                <button class="btn btn-info btn-m btn-fill dropdown-toggle" type="button" 
-                                                                data-toggle="dropdown">Action
-                                                                </button>
-                                                                <ul class="dropdown-menu">
-                                                                    <li><a href="#"><i class="ti-trash"></i>  Supprimer</a></li>
-                                                                    <li><a href="#"><i class="ti-pencil"></i> Editer</a></li>
-                                                                  
-                                                                </ul>
-                                                              </div>
-                                                </td>
-                                                
-                                              </tr>
+                                              <tr *ngFor='let row of rows'>
+                                                            <td>{{row.codeue}}</td>
+                                                            <td>{{row.titreUE}}</td>
+                                                            <td>{{row.maquette}}</td>
+                                                            <td>{{row.hAFaire}}</td>
+
+                                                            <td *ngIf='row.hFaites==0'>
+                                                                    <span class="label label-warning">{{row.hFaites}}</span>
+                                                                    </td>
+                                                                    <td *ngIf='row.hFaites>0'>
+                                                                            <span class="label label-primary">{{row.hFaites}}</span>
+                                                                            </td>
+                                                                            <td *ngIf='row.hFaites>hAFaire'>
+                                                                                    <span class="label label-info">{{row.hFaites}}</span>
+                                                                                    </td>
+                                                                                    <td *ngIf='row.hFaites==hAFaire'>
+                                                                                            <span class="label label-success">{{row.hFaites}}</span>
+                                                                                            </td>
+                                                            <td *ngIf='row.hBilan==0'>
+                                                                    <span class="label label-success">{{row.hBilan}}</span>
+                                                            </td>
+                                                            <td *ngIf='row.hBilan<0'>
+                                                                    <span class="label label-danger">{{row.hBilan}}</span>
+                                                            </td>
+                                                            <td *ngIf='row.hBilan>0'>
+                                                                    <span class="label label-primary">{{row.hBilan}}</span>
+                                                            </td>
+                                                            <td>{{row.responsableUE}}</td>
+                                                            <td *ngIf='row.verrouUE==true'>
+                                                                <span class="label label-primary">ON</span>
+                                                            </td>
+                                                            <td *ngIf='row.verrouUE==false'>
+                                                                <span class="label label-warning">OFF</span>
+                                                            </td>
+                                                                                          </tr>
+                                            
                                             </tbody>
                                           </table>
                                 <div class="footer">
